--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:christmasgifts
+spring.datasource.url=jdbc:h2:mem:coffeetracker
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
