--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "christmas-gifts-frontend",
+  "name": "coffee-tracker-frontend",
   "private": true,
   "version": "1.0.0",
   "type": "module",
