--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,10 +17,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# CORS Configuration
-spring.web.cors.allowed-origins=http://localhost:5173,http://localhost:3000
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
+# CORS Configuration (can be overridden by profile-specific properties)
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000}
+app.cors.allowed-methods=${CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE,OPTIONS}
+app.cors.allowed-headers=${CORS_ALLOWED_HEADERS:*}
+app.cors.exposed-headers=${CORS_EXPOSED_HEADERS:Authorization}
 
 # Authentication Configuration
 app.auth.username=${APP_USERNAME:admin}
